--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="section">
       <p><strong>Дата:</strong> 15 июля 2025 года</p>
-      <p><strong>Место:</strong> Загородный комплекс "Лавандовый Берег", Московская область</p>
+      <p><strong>Место:</strong> Загородный комплекс "Лавандовый Берег", Киевская область</p>
       <p><strong>Начало:</strong> 15:00</p>
     </div>
 
